--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/mocha": "^10.0.1",
     "autoprefixer": "^10.4.4",
     "meteor-node-stubs": "^1.2.1",
     "postcss": "^8.4.12",
